      know if the compile succeeds anyway, so we can downgrade the
      warning.

  o Minor features (logging):
    - Always prepend "Bug: " to any log message about a bug.
    - Put a platform string (e.g. "Linux i686") in the startup log
      message, so when people paste just their logs, we know if it's
      openbsd or windows or what.

  o Minor features (other):
    - More unit tests.

  o Removed features:
    - Removed support for the old binary "version 0" controller protocol.
      This has been deprecated since 0.1.1, and warnings have been issued
      since 0.1.2.  When we encounter a v0 control message, we now send back
      an error and close the connection.
    - Remove the old "dns worker" server DNS code: it hasn't been default
      since 0.1.2.2-alpha, and all the servers seem to be using the new
      eventdns code.

  o Minor bugfixes (portability):
    - Even though windows is equally happy with / and \ as path separators,
      try to use \ consistently on windows and / consistently on unix: it
      makes the log messages nicer.

  o Minor bugfixes (other):
    - Stop allowing hibernating servers to be "stable" or "fast".
    - Check return values from pthread_mutex functions.
    - Don't save non-general-purpose router descriptors to the disk cache,
      because we have no way of remembering what their purpose was when
      we restart.
    - Correctly enforce that elements of directory objects do not appear
      more often than they are allowed to appear.

  o Minor bugfixes (controller), reported by daejees:
    - Make 'getinfo fingerprint' return a 551 error if we're not a
      server, so we match what the control spec claims we do.
    - Fix a typo in an error message when extendcircuit fails that
      caused us to not follow the \r\n-based delimiter protocol.
    - The control spec described a GUARDS event, but the code
      implemented a GUARD event. Standardize on GUARD, but support people
      asking for GUARDS too.