@@ -30,6 +30,15 @@ Changes in version 0.2.0.1-alpha - 2007-??-??
       message, so when people paste just their logs, we know if it's
       openbsd or windows or what.
 
+  o Minor features (directory system):
+    - Directory authorities accept and serve "extra info" documents for
+      routers.  These documents contain fields from router descriptors that
+      aren't usually needed, and that use a lot of excess bandwidth. Once
+      these fields are removed from router descriptors, the bandwidth savings
+      should be about 60%.  (Limitation: servers do not yet upload extra-info
+      documents; authorities do not yet cache them.)  [Partially implements
+      proposal 104.]
+
   o Minor features (other):
     - More unit tests.
 
